Fix form overflow on small screens

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -310,5 +310,6 @@ ul.tag-options.tags-list {
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   section.modal-form {
     width: 350px;
+    top: 5px;
   }
 }
